# project1

./: .env.example  README.md  main.py  pyproject.toml  settings.py
logs/: log.txt
src/: csv_reader.py  decorators.py  excel_reader.py  external_api.py  generators.py  masks.py  processing.py  transactions_filter.py  utils.py  widget.py
tests/: conftest.py  test_csv_reader.py  test_decorators.py  test_excel_reader.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_filter.py  test_utils.py  test_widget.py
